--- a/gocalendar/src/assets/style/desktopCalendar.scss
+++ b/gocalendar/src/assets/style/desktopCalendar.scss
@@ -3,7 +3,7 @@ $secondary-color: #3D7DBD;
 $text-color: #CDF6FF;
 $border-color: #6573BC;
 $shadow-color: #00244B;
-$header-height: 150px;
+$header-height: 100px;
 $tr-height: 100px;
 
 .container {
@@ -17,7 +17,6 @@ $tr-height: 100px;
     margin-inline: 50px;
     margin-top: $header-height;
     color: $text-color;
-    padding: 50px 0;
 
     table, td, th{
         border-right: solid black;
@@ -29,22 +28,43 @@ $tr-height: 100px;
       height: $tr-height;
     }
     th{
+      font-size: 2vw;
       max-width: 0;
       width: 14%;
       clear: left;
     }
     td {
+      position: relative;
       max-width: 0;
       width: 14%;
       vertical-align: top;
       border-top: solid black;
       clear: left;
     }
+    .dayNumber{
+      width: 25px;
+      height: 25px;
+      position: absolute;
+      right: 2px;
+      top: 2px;
+      background-color: #00244B;
+      padding: 2px;
+      border-radius: 50%;
+      p{
+        font-size: 20px;
+        margin: 0;
+      }
+    }
+
+    .events{
+      height: 100px;
+      width: 100%;
+      height: heu;
+    }
 
     .eventList{
       max-height: $tr-height;
       overflow: hidden;
-      height: 100px;
       height: 100%;
       width: calc(100% - 10px);
       margin-left: 5px;
@@ -57,6 +77,7 @@ $tr-height: 100px;
       overflow: overlay;
     }
     .eventSingle{
+      margin-top: 3px;
       border: 1px solid white;
       border-radius: 5px;
       height: 40px;
@@ -69,6 +90,25 @@ $tr-height: 100px;
         text-overflow: ellipsis; 
       }
     }
+    
+    .addEvent{
+      cursor: pointer; 
+      z-index: 99;
+      width: 25px;
+      height: 25px;
+      position: absolute;
+      right: calc(50% - 12.5px);
+      bottom: -15px;
+      background-color: #00244B;
+      padding: 2px;
+      border-radius: 50%;
+      display: none;
+      justify-content: center;
+      align-items: center;
+    }
+    .events:hover .addEvent{
+      display: flex;
+    }
 
     table:last-child, td:last-child, th:last-child{
         border-right: none;
@@ -78,6 +118,8 @@ $tr-height: 100px;
         font-size: 200%;
         width: 100%;
     }
+
+    
 }
 .modal-backdrop {
   position: fixed;
@@ -92,9 +134,9 @@ $tr-height: 100px;
 }
 
 .modal {
+  width: 70%;
   background: #FFFFFF;
   box-shadow: 2px 2px 20px 1px;
-  overflow-x: auto;
   display: flex;
   flex-direction: column;
 }
@@ -106,10 +148,14 @@ $tr-height: 100px;
 }
 
 .modal-header {
+  justify-content: center;
+  align-items: center;
+  width: calc(100% - 30px);
   position: relative;
   border-bottom: 1px solid #eeeeee;
   color: #4AAE9B;
   justify-content: space-between;
+  font-size: 4vw;
 }
 
 .modal-footer {
@@ -121,6 +167,9 @@ $tr-height: 100px;
 .modal-body {
   position: relative;
   padding: 20px 10px;
+  .typesInput{
+    width: fit-content;
+  }
 }
 
 .btn-close {
@@ -151,7 +200,7 @@ $tr-height: 100px;
 
 /* Track */
 ::-webkit-scrollbar-track {
-  box-shadow: inset 0 0 5px grey; 
+  // box-shadow: inset 0 0 5px grey; 
   border-radius: 5px;
 }
   
@@ -159,4 +208,124 @@ $tr-height: 100px;
 ::-webkit-scrollbar-thumb {
   background: #4AAE9B; 
   border-radius: 5px;
+}
+
+
+
+$bg-color: #424242;
+$hl-color: #2196F3;
+$muted-color: mix(white, $bg-color, 70%);
+$trans-time: 300ms;
+
+.group {
+  position: relative;
+  width: 80%;
+}
+
+// INPUTS // ============================== //
+textarea {
+  resize: none;
+}
+
+input,
+textarea {
+  background: none;
+  color: $muted-color;
+  font-size: 18px;
+  padding: 10px 10px 10px 5px;
+  display: block;
+  border: none;
+  border-radius: 0;
+  margin-left: 0px;
+  border-bottom: 1px solid $muted-color;
+  &:focus {
+    outline: none;
+  }
+  &:focus ~ label,
+  &:valid ~ label {
+    top: -14px;
+    font-size: 12px;
+    color: $hl-color;
+  }
+  &:focus ~ .bar:before {
+    width: 100%;
+  }
+}
+
+input[type="password"] {
+  letter-spacing: 0.3em;
+}
+
+label {
+  color: $muted-color;
+  font-size: 16px;
+  font-weight: normal;
+  position: absolute;
+  pointer-events: none;
+  left: 5px;
+  top: 10px;
+  transition: $trans-time ease all;
+}
+
+.bar {
+  position: relative;
+  display: block;
+  width: 100%;
+  &:before {
+    content: '';
+    height: 2px;
+    width: 0;
+    bottom: 0px;
+    position: absolute;
+    background: $hl-color;
+    transition: $trans-time ease all;
+    left: 0%;
+  }
+}
+
+// BUTTONS // ============================== //
+.btn {
+  background: #fff;
+  color: mix(black, $muted-color, 25%);
+  border: none;
+  padding: 10px 20px;
+  border-radius: 3px;
+  letter-spacing: 0.06em;
+  text-transform: uppercase;
+  text-decoration: none;
+  outline: none;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  transition: all 0.3s cubic-bezier(.25, .8, .25, 1);
+  &:hover {
+    color: mix(black, $muted-color, 30%);
+    box-shadow: 0 7px 14px rgba(0, 0, 0, 0.18), 0 5px 5px rgba(0, 0, 0, 0.12);
+  }
+  &.btn-link {
+    background: $hl-color;
+    color: mix(white, $hl-color, 80%);
+    &:hover {
+      background: darken($hl-color, 5%);
+      color: mix(white, $hl-color, 85%);
+    }
+  }
+  &.btn-submit {
+    background: $hl-color;
+    color: mix(white, $hl-color, 70%);
+    &:hover {
+      background: darken($hl-color, 5%);
+      color: mix(white, $hl-color, 85%);
+    }
+  }
+  &.btn-cancel {
+    background: #eee;
+    &:hover {
+      background: darken(#eee, 5%);
+      color: mix(black, $muted-color, 30%);
+    }
+  }
+}
+
+.btn-box {
+  text-align: center;
+  margin: 50px 0;
 }
