--- a/gocalendar/src/assets/style/mobileCalendarStyle.scss
+++ b/gocalendar/src/assets/style/mobileCalendarStyle.scss
@@ -5,7 +5,7 @@ $border-color: #6573BC;
 $shadow-color: #00244B;
 $header-height: 100px;
 $icon-color: #EB9A28;
-$tr-height: 100px;
+$tr-height: 50px;
 
 .contenitore {
     text-align: center;
@@ -15,7 +15,6 @@ $tr-height: 100px;
     border: 1px solid $border-color;
     max-width: 100%;
     margin: auto;
-    margin-inline: 50px;
     margin-top: $header-height;
     color: $text-color;
 
@@ -41,7 +40,6 @@ $tr-height: 100px;
       height: $tr-height;
     }
     th{
-      font-size: 2vw;
       max-width: 0;
       width: 14%;
       clear: left;
@@ -53,6 +51,17 @@ $tr-height: 100px;
       vertical-align: top;
       border-top: solid black;
       clear: left;
+    }
+    .dayNumberList{
+      width: 25px;
+      height: 25px;
+      background-color: #00244B;
+      padding: 2px;
+      border-radius: 50%;
+      p{
+        font-size: 20px;
+        margin: 0;
+      }
     }
     .dayNumber{
       width: 25px;
@@ -68,20 +77,35 @@ $tr-height: 100px;
         margin: 0;
       }
     }
+    .dayEventBell{
+      width: 25px;
+      height: 25px;
+      position: absolute;
+      left: 2px;
+      bottom: 10px;
+      i{
+        font-size: 20px;
+        margin: 0;
+      }
+    }
 
     .events{
-      height: 100px;
+      height: $tr-height;
       width: 100%;
     }
 
     .eventList{
-      max-height: $tr-height;
+      max-height: 300px;
       overflow: hidden;
-      height: 100%;
+      background-color: #00244B;
+      // height: 100%;
       width: calc(100% - 10px);
-      margin-left: 5px;
-      padding: 0px;
+      margin-top: 10px;
+      border-radius: 5%;
+      margin-inline: auto;
+      padding-block: 10px;
       float:  left;
+      padding-inline: 5px;
       clear: left;
     }
     .eventList:hover{
@@ -105,17 +129,17 @@ $tr-height: 100px;
     .addEvent{
       cursor: pointer; 
       z-index: 99;
-      width: 25px;
-      height: 25px;
-      position: absolute;
-      right: calc(50% - 12.5px);
-      bottom: -15px;
+      width: 35px;
+      height: 35px;
+      position: fixed;
+      right: 5px;
+      bottom: 5px;
       background-color: #00244B;
       padding: 2px;
       border-radius: 50%;
-      display: none;
       justify-content: center;
       align-items: center;
+      font-size: 30px;
     }
     
     .events:hover .addEvent{
@@ -136,9 +160,15 @@ $tr-height: 100px;
   height: 100px;
 }
 
-.linkButtonModify{
-  // width: 25px;
-  // height: 25px;
+.submitButton{
+  z-index: 99;
+  width: 25px;
+  height: 25px;
+  position: absolute;
+  right: 20px;
+  bottom: -15px;
+  justify-content: center;
+  align-items: center;
   button{
     border: solid #EB9A28 1px;
     cursor: pointer;
@@ -149,11 +179,12 @@ $tr-height: 100px;
   }
 }
 
-.underButton{
+.trashButton{
   z-index: 99;
   width: 25px;
   height: 25px;
   position: absolute;
+  right: 60px;
   bottom: -15px;
   justify-content: center;
   align-items: center;
@@ -164,18 +195,6 @@ $tr-height: 100px;
     color: $icon-color;
     padding: 10px;
     border-radius: 50%;
-  }
-}
-.trashButton{
-  right: 60px;
-}
-.submitButton{
-  right: 20px;
-}
-.linkButton{
-  left: 20px;
-  a{
-    color: $icon-color;
   }
 }
 
