--- a/gocalendar/src/assets/style/userRouteStyle.scss
+++ b/gocalendar/src/assets/style/userRouteStyle.scss
@@ -5,45 +5,85 @@ $border-color: #6573BC;
 $shadow-color: #00244B;
 $header-height: 150px;
 
-.container {
-    text-align: center;
-    box-shadow: 2px 2px 10px $shadow-color;
-    background-color: $secondary-color;
-    border-radius: 10px;
-    border: 1px solid $border-color;
-    max-width: calc(100vh - 40vh);
-    min-height: fit-content;
+.container{
     margin: auto;
     margin-top: $header-height;
+    max-width: fit-content;
+    display: flex;
+    justify-content: center;
+    box-shadow: 2px 2px 10px $shadow-color;
+    border-radius: 10px;
+}
+
+.menuSettings{
+    background-color: $secondary-color;
+    // padding-top: 15px;
+    color: $text-color;
+    border-radius: 10px 0px 0px 10px;
+    border: 1px solid $border-color;
+    div{
+        padding-inline: 15px;
+        height: 40px;
+        span{
+            line-height: 40px;
+            font-size: large;
+        }
+    }
+    :first-child{
+        border-radius: 10px 0px 0px 0px;
+    }
+    .active{
+        background-color: $shadow-color;
+    }
+}
+
+.settings {
+    position: relative;
+    text-align: center;
+    background-color: $secondary-color;
+    border-radius: 0px 10px 10px 0px;
+    max-width: 100%;
+    border: 1px solid $border-color;
     color: $text-color;
     padding: 50px 0;
-
-    form{
-        display: inline-flexbox;     
-    }
 
     .row{
         margin-top: 10px;
         margin-bottom: 10px;
+        padding-inline: 20px;
+        text-align: start;
+        display: flex;
+        justify-content: space-between;
         vertical-align: middle;
     }
 
+    .userSettings, .calendarSetting, .adminList{
+        min-width: 400px;
+    }
+
+    .calendarSetting{
+        .row{
+            padding-inline: 60px;
+        }
+    }
+
     label {
-        font-size: 200%;
-        height: fit-content;
-        margin: auto;
-        text-align: start;
-        min-width: 180px;
-        display: inline-block;
+        font-size: 150%;
+        // height: fit-content;
+        min-width: 130px;
         margin-right: 5px;
     }
 
-    input {
+    input, select {
         padding-inline: 6px;
         height: 30px;
         border: 1px solid grey;
         border-radius: 5px;
-        max-width: 200px;
+        max-width: 180px;
+    }
+    input[type=checkbox]{
+        width: 25px;
+        height: 25px;
     }
 
     button {
@@ -55,11 +95,36 @@ $header-height: 150px;
         background-color: #00527F;
         font-size: 150%;
         height: 40px;
-        width: 60%;
+        width: 70%;
         margin-top: 20px;
     }
     button:active{
         background-color: #00244B;
+    }
+
+    .underButton{
+        z-index: 99;
+        top: -40px;
+        right: 0px;
+        width: 60px;
+        height: 25px;
+        position: absolute;
+        justify-content: center;
+        align-items: center;
+        .miniButton{
+            border: solid #EB9A28 1px;
+            cursor: pointer;
+            background-color: #00244B;
+            color:#EB9A28;
+            border-radius: 50%;
+            i{
+                font-size: medium;
+            }
+        }
+    }
+
+    .submitButton{
+        right: 50px;
     }
 
     .link{
@@ -73,4 +138,34 @@ $header-height: 150px;
         color: #EB9A28;
     }
 }
+
+@media (max-width : 600px) {
+    .container{
+        display: block;
+    }
+    .menuSettings{
+        display: flex;
+        border-radius: 10px 10px 0px 0px;
+        :first-child{
+            border-radius: 10px 0px 0px 0px;
+        }
+    }
+    .settings{ 
+        border-radius: 0px 0px 10px 10px;
+        .userSettings, .calendarSetting, .adminList{
+            min-width: 45vh;
+        }
+        .row{
+            padding-inline: 10px;
+        }
+        .underButton{
+            top: auto;
+            bottom: 10px;
+        }
+    }
+    input, select {
+        max-width: 130px;
+    }
+}
+
 
