--- a/gocalendar/src/assets/style/desktopCalendar.scss
+++ b/gocalendar/src/assets/style/desktopCalendar.scss
@@ -1,6 +1,6 @@
 $primary-color: #0085b6;
-$secondary-color: #3D7DBD;
-$text-color: #CDF6FF;
+$secondary-color: #0085B6;
+$text-color: #eeeeee;
 $border-color: #6573BC;
 $shadow-color: #00244B;
 $header-height: 100px;
@@ -131,6 +131,8 @@ $tr-height: 100px;
         width: 100%;
     }
 }
+
+
 .histories{
   width: 200px;
   height: 100px;
