--- a/gocalendar/src/assets/style/desktopCalendar.scss
+++ b/gocalendar/src/assets/style/desktopCalendar.scss
@@ -64,6 +64,7 @@ $tr-height: 100px;
       padding: 2px;
       border-radius: 50%;
       p{
+        color:#EB9A28;
         font-size: 20px;
         margin: 0;
       }
@@ -286,7 +287,15 @@ textarea {
 input[type="password"] {
   letter-spacing: 0.3em;
 }
-
+input[type=file]::file-selector-button{
+  background: #002951;
+  border-radius: 10px;
+  color: #74d13a;
+  font-weight: bold;
+}
+input[type=file]::file-selector-button:hover {
+  background: #0d45a5;
+}
 label {
   color: $shadow-color;
   font-size: 16px;
@@ -301,6 +310,9 @@ label {
   top: -2px;
   font-size: 12px;
   color: $hl-color;
+}
+.titleLabel{
+  color: white;
 }
 
 .bar {
