--- a/gocalendar/src/assets/style/specialObjectStyle.scss
+++ b/gocalendar/src/assets/style/specialObjectStyle.scss
@@ -22,7 +22,7 @@ button{
     color: $text-color;
     border-bottom: 1px solid $text-color;  
 }
-  
+
 input,
 textarea {
     background: none;
@@ -116,7 +116,7 @@ label {
                     white-space: nowrap;
                     overflow: hidden;
                     text-overflow: ellipsis;
-                    color: #4AAE9B;
+                    color: #74d13a;
                     background-color: $shadow-color;
                     span{
                         position: absolute;
@@ -155,6 +155,56 @@ label {
     }
 }
 
+.typeBackground{
+    width: 100%;
+    background: $shadow-color;
+    height: 40px;
+    background: $shadow-color;
+    display: flex;
+    padding-top: 5px;
+}
+
+.typesInput{
+    margin-inline: auto;
+    position: relative;
+    float: left;
+    width: auto;
+    background-color: #002951;
+    max-width: 100%;
+    border-radius: 2px;
+    border: 1px solid #EB9A28;
+    select {
+        background-color: #002951;
+        color: #74d13a;
+        font-family: "helvetica neue", helvetica;
+        font-size: 1rem;
+        font-weight: 100;
+        max-width: 100%;
+        padding: 8px 24px 8px 10px;
+        border: none;
+        -webkit-appearance: none;
+            -moz-appearance: none;
+                appearance: none;
+        &:active,
+        &:focus {
+            outline: none;
+            box-shadow: none;
+        }
+    }
+    &:after {
+        content: " ";
+        position: absolute;
+        top: 50%;
+        margin-top: -2px;
+        right: 8px;
+        width: 0; 
+        height: 0; 
+        border-left: 5px solid transparent;
+        border-right: 5px solid transparent;
+        border-top: 5px solid #EB9A28;
+    }
+}
+
 .addObject {
     z-index: 99999;
     font-size: 25px;
@@ -166,4 +216,3 @@ label {
     align-items: center;
 
 }
-
