--- a/gocalendar/src/assets/style/typeStyle.scss
+++ b/gocalendar/src/assets/style/typeStyle.scss
@@ -103,7 +103,7 @@ $trans-time: 300ms;
             align-items: flex-start;
             justify-content: start;
             .singleObject {
-                border: solid 3px $shadow-color;
+                border: solid 4px;
                 border-radius: 4px;
                 margin-left: calc(10%/4);
                 margin-bottom: 15px;
