--- a/gocalendar/src/assets/style/navHeader.scss
+++ b/gocalendar/src/assets/style/navHeader.scss
@@ -35,8 +35,10 @@ header{
         right: 0px;
         position: fixed;
         height: 100%;
-        background-color: white;
+        background-color: #00244be8;
         div{
+            width: 100%;
+            border-bottom: 1px solid  #EB9A28;
             cursor: pointer;
             width: max-content;
             margin-top: 30px;
@@ -46,6 +48,7 @@ header{
             }
         }
         .close{
+            border-bottom: 0px;
             margin-top: 10px;
             margin-left: 15px;
         }
