--- a/gocalendar/src/assets/style/navHeader.scss
+++ b/gocalendar/src/assets/style/navHeader.scss
@@ -83,6 +83,10 @@ header{
         text-decoration: none;
         padding: 5px;
     }
+    .active{
+        background-color: #0085b6;
+        color: #EB9A28;
+    }
 
     .nav{
         display: inline-flex;
