--- a/gocalendar/src/assets/style/global.scss
+++ b/gocalendar/src/assets/style/global.scss
@@ -4,7 +4,8 @@ $shadow-color-opacity: #00244be8;
 
 body{
   font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  background-image: url('~@/assets/background.png');
+  background-color: #4158D0;
+  background-image: linear-gradient(43deg, #4158D0 0%, #C850C0 46%, #FFCC70 100%);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
