--- a/gocalendar/src/assets/style/navHeader.scss
+++ b/gocalendar/src/assets/style/navHeader.scss
@@ -83,7 +83,7 @@ header{
         text-decoration: none;
         padding: 5px;
     }
-    .active{
+    .router-link-exact-active{
         background-color: #0085b6;
         color: #EB9A28;
     }
