--- a/gocalendar/src/assets/style/navHeader.scss
+++ b/gocalendar/src/assets/style/navHeader.scss
@@ -118,7 +118,7 @@ header{
             display: flex;
             flex-wrap: wrap-reverse;
             align-content: flex-end;
-            justify-content: end;
+            justify-content: flex-end;
             div.user{
                 margin-left: 15px;
                 .user{
